Target SDK 34 and other dependency upgrades (#115)
* Upgrade Gradle from 7.5.1 to 8.5 and AGP from 7.3.1 to 8.2.1

* Specify java version for Jitpack builds

* Catch unit tests up with JDK 17 --JVM argument allows modifying fields' visibility. Needed slight alteration to the setFinalStatic method too.

* Now need to update JDK version everywhere in the project

* Added RefreshVersions gradle tool to help manage versions of our dependencies and updated dependencies to latest versions

---------

Co-authored-by: Evan Masseau <>